// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
<div
  className="InputField__InputBox-xsvhdm-0 ikXCMw"
>
  <input
    className="InputField__Input-xsvhdm-1 fuxtoD"
    disabled={true}
    onChange={[Function]}
    placeholder="Input field"
    readOnly={false}
    type="text"
  />
</div>
`;

exports[`hasError 1`] = `
<div
  className="InputField__InputBox-xsvhdm-0 ikXCMw"
>
  <input
    className="InputField__Input-xsvhdm-1 fuxtoD"
    disabled={false}
    onChange={[Function]}
    placeholder="Input field"
    readOnly={false}
    type="text"
  />
  <span
    className="InputField__ErrorMessage-xsvhdm-2 fzvgZg"
  >
    has error!
  </span>
</div>
`;

exports[`normal 1`] = `
<div
  className="InputField__InputBox-xsvhdm-0 ikXCMw"
>
  <input
    className="InputField__Input-xsvhdm-1 fuxtoD"
    disabled={false}
    onChange={[Function]}
    placeholder="Input field"
    readOnly={false}
    type="text"
  />
</div>
`;

exports[`readOnly 1`] = `
<div
  className="InputField__InputBox-xsvhdm-0 ikXCMw"
>
  <input
    className="InputField__Input-xsvhdm-1 beteWP"
    disabled={false}
    onChange={[Function]}
    placeholder="Input field"
    readOnly={true}
    type="text"
  />
</div>
`;
